fix: a white space issue Updated By Github Actions

--- a/css/main.css
+++ b/css/main.css
@@ -1308,7 +1308,7 @@ pre code {
     vertical-align: middle;
   }
   .links-of-author a::before {
-    background: #08ffff;
+    background: #ccffa2;
     display: inline-block;
     margin-right: 3px;
     transform: translateY(-2px);
